--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/SorrelBrigman/backend_capstone/issues"
   },
-  "homepage": "https://github.com/SorrelBrigman/backend_capstone#readme"
+  "homepage": "https://github.com/SorrelBrigman/backend_capstone#readme",
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "express": "^4.15.2",
+    "request": "^2.81.0"
+  }
 }
