about to Promisify the scraping

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend_capstone",
   "version": "1.0.0",
   "description": "Server side portion of the student concept project Similar Tastes",
-  "main": "index.js",
+  "main": "scraper/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
