--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend_capstone",
   "version": "1.0.0",
   "description": "Server side portion of the student concept project Similar Tastes",
-  "main": "scraper/server.js",
+  "main": "scraper/server2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.15.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.3"
   }
 }
