--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.2",
     "knex": "^0.13.0",
     "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.5",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.3"
